--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,6 +9,7 @@ ja:
           name: ユーザー名
           email: メールアドレス
           password: パスワード
+          password_confirmation: パスワード確認
           password_digest: 確認用パスワード
           profile: 自己紹介文
         board:
